Unify POST /legs API
